--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,4 +78,5 @@ dependencies {
     implementation("com.google.firebase:firebase-messaging")
     implementation("com.google.firebase:firebase-auth")
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'androidx.biometric:biometric:1.2.0-alpha05'
 }
