--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   uuid: ^4.3.3
 
   carousel_slider: ^4.2.1
+  flutter_localization: ^0.2.0
+
+  local_auth: ^2.2.0
 
   lottie: ^3.1.0
 
